--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <title>{{ page.title }}</title>
-        <link rel="stylesheet" href="/assets/css/styles.css" />
+        <link rel="stylesheet" href="assets/css/normalize.css" />
+        <link rel="stylesheet" href="assets/css/magick.css" />
     </head>
     <body>
-        {% include navigation.html %} {{ content }}
+        <main>{% include navigation.html %} {{ content }}</main>
     </body>
 </html>
