--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="assets/css/normalize.css" />
-    <link rel="stylesheet" href="assets/css/magick.css" />
-  </head>
-  <body>
-    <main>{% include navigation.html %} {{ content }}</main>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <title>{{ page.title }}</title>
+        <!-- <link rel="stylesheet" href="assets/css/normalize.css" />
+    <link rel="stylesheet" href="assets/css/magick.css" /> -->
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+        />
+    </head>
+    <body>
+        <main class="container">
+            {% include navigation.html %} {{ content }}
+        </main>
+    </body>
 </html>
