--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>{{ page.title }}</title>
+        <title>Sovereign</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <link rel="stylesheet" href="assets/css/pico.min.css" />
     </head>
     <body>
