--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,27 @@
         <link rel="stylesheet" href="assets/css/pico.min.css" />
     </head>
     <body>
+        <header>
+            <nav class="container">
+                <ul>
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="/rules">Rules</a>
+                    </li>
+                    <li>
+                        <a href="/classes">Classes</a>
+                    </li>
+                    <li>
+                        <a href="/equipment">Equipment</a>
+                    </li>
+                    <li>
+                        <a href="/spells">Spells</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <main class="container">
             {% include navigation.html %} {{ content }}
         </main>
