Add a link to the github footer

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,13 @@
         </header>
         <main class="container">
             {% include navigation.html %} {{ content }}
+            <footer>
+                <hr />
+                This is a living document with
+                <a href="https://github.com/beaurancourt/sovereign"
+                    >open source code</a
+                >.
+            </footer>
         </main>
     </body>
 </html>
