--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
         <title>Sovereign</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <link rel="stylesheet" href="assets/css/pico.min.css" />
+        <link rel="stylesheet" href="assets/css/custom.css" />
     </head>
     <body>
         <header>
