create toggleable sidebar content

--- a/_includes/toc-element.html
+++ b/_includes/toc-element.html
@@ -1,7 +1,7 @@
-<li>
+<li class="toc_listitem">
     <a href="{{include.item.id}}">{{include.item.label}}</a>
     {% unless include.item.children == empty %}
-        <ul>
+        <ul class="toc_innerchild">
             {% for child in include.item.children %} {% include toc-element.html
             item=child %} {% endfor %}
         </ul>
