--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,6 +4,7 @@ img[alt="small"] {
 
 ul {
     margin-bottom: 0px;
+    padding-inline-start: 1.25rem;
 }
 
 body {
@@ -11,42 +12,69 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.sidebar {
+#nav_header {
+    padding-top: 1rem;
+    margin-bottom: 2rem;
+}
+
+.toggle_close {
+    width: 1rem
+}
+
+.hamburger {
+    width: 1.5rem;
+    cursor: pointer;
+}
+
+.sidebar_top {
+    position: relative; 
+}
+
+.top_wrapper {
+    position: fixed;   
+    padding: 1.5rem;
+    width: 19rem;
+    top: 0;
+    background: var(--pico-background-color);
+}
+
+.top_sticky {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--pico-text-color);
+}
+
+.sidebar_title {
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+
+#sidebar {
     position: fixed;
+    width: 20rem;
+    height: 100%;
+    background: var(--pico-background-color);
+    left: -20rem;
+    transition: all 250ms linear;
+    overflow-y: auto;
+}
+
+#sidebar.active {
     top: 0;
     left: 0;
-    width: 250px;
-    height: 100%;
-    overflow-y: auto;
-    padding: 20px;
-    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
+#sidebar ul li {
+    color: rgba(230, 230, 230, 0.9);
+    list-style: none;
+    padding: 0.25rem;
 }
 
-.sidebar li {
-    margin: 5px 0;
-}
-
-.sidebar a {
-    text-decoration: none;
-    display: block;
-    padding: 8px;
-    border-radius: 4px;
-}
-
-.sidebar a:hover {
-    background-color: #007bff;
-}
-
-.sidebar ul ul {
-    padding-left: 20px;
+#toc_list {
+    margin-top: 6rem;
 }
 
 .content {
-    margin-left: 270px; /* Adjust this value according to the sidebar width */
-    padding: 20px;
+    padding: 1.5rem;
 }
