--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,15 +1,19 @@
 <div id="sidebar">
-  <div class="sidebar_top">
-    <div class="top_wrapper">
-      <div class="top_sticky">
-        <span class="sidebar_title">Table of Contents</span>
-        <img src="assets/icons/x-solid.svg" alt="Close" class="toggle_close" onclick="toggleSidebar()" />
-      </div>
+    <div class="sidebar_top">
+        <div class="top_wrapper">
+            <div class="top_sticky">
+                <span class="sidebar_title">Table of Contents</span>
+                <span
+                    class="material-symbols-outlined"
+                    onclick="toggleSidebar()"
+                >
+                    close
+                </span>
+            </div>
+        </div>
     </div>
-  </div>
-  <ul id="toc_list">
-    {% for item in site.data.toc %}
-        {% include toc-element.html item=item %}
-    {% endfor %}
-  </ul>
+    <ul id="toc_list">
+        {% for item in site.data.toc %} {% include toc-element.html item=item %}
+        {% endfor %}
+    </ul>
 </div>
