--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,12 @@
     </head>
     <body>
         <div class="wrapper">
-            <header id="nav_header">
-                <div class="toggle-btn container" onclick="toggleSidebar()">
-                    <span class="material-symbols-outlined"> menu </span>
+            <header id="nav-header" class="container">
+                <div
+                    class="material-symbols-outlined"
+                    onclick="toggleSidebar()"
+                >
+                    menu
                 </div>
             </header>
             {% include toc.html %}
