--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -16,12 +16,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-#nav_header {
-    padding-top: 1rem;
-    margin-bottom: 2rem;
-}
-
-.toggle_close {
+.toggle-close {
     width: 1rem;
 }
 
@@ -30,53 +25,28 @@ body {
     cursor: pointer;
 }
 
-.sidebar_top {
-    position: relative;
-}
-
-.top_wrapper {
-    position: fixed;
-    padding: 1.5rem;
-    width: 19rem;
-    top: 0;
-    background: var(--pico-background-color);
-}
-
-.top_sticky {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: var(--pico-text-color);
-}
-
-.sidebar_title {
-    font-size: 1.25rem;
-    font-weight: 600;
+#nav-header {
+    margin-top: 10px;
 }
 
 #sidebar {
-    position: fixed;
-    width: 20rem;
-    height: 100%;
-    background: var(--pico-background-color);
-    left: -20rem;
-    transition: all 250ms linear;
+    background-color: var(--pico-background-color);
+    max-height: calc(-31.5px + 100vh);
     overflow-y: auto;
 }
 
 #sidebar.active {
-    top: 0;
-    left: 0;
+    position: fixed;
+}
+
+#sidebar:not(.active) {
+    display: none;
 }
 
 #sidebar ul li {
     color: rgba(230, 230, 230, 0.9);
     list-style: none;
     padding: 0.25rem;
-}
-
-#toc_list {
-    margin-top: 6rem;
 }
 
 .content {
