--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,19 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
         />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="assets/js/lunr.js"></script>
         <script src="assets/js/sidebar.js"></script>
+        <script src="assets/js/search.js"></script>
     </head>
     <body>
         <header id="nav-header" class="container">
             <div class="material-symbols-outlined" onclick="toggleSidebar()">
                 menu
+            </div>
+            <div id="search-container">
+                <input type="text" id="search"></input>
+                <ul id="search-results" />
             </div>
         </header>
         {% include toc.html %}
