Add a combat example

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
                 menu
             </div>
             <div id="search-container">
-                <input type="text" id="search"></input>
+                <input type="text" id="search" />
                 <ul id="search-results" />
             </div>
         </header>
