Add a home button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
             <div class="material-symbols-outlined" onclick="toggleSidebar()">
                 menu
             </div>
+            <a class="material-symbols-outlined home" href="/">home</a>
             <div id="search-container">
                 <input type="text" id="search" />
                 <ul id="search-results" />
