Make tables scroll independently

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="assets/js/sidebar.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/minisearch@7.1.0/dist/umd/index.min.js"></script>
-        <script src="assets/js/search.js"></script>
+        <script src="/assets/js/search.js"></script>
+        <script src="/assets/js/table-wrapper.js"></script>
     </head>
     <body>
         <header id="nav-header" class="container">
