consolidate table wrapper into search

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,9 @@
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
         />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="assets/js/sidebar.js"></script>
+        <script src="/assets/js/sidebar.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/minisearch@7.1.0/dist/umd/index.min.js"></script>
         <script src="/assets/js/search.js"></script>
-        <script src="/assets/js/table-wrapper.js"></script>
     </head>
     <body>
         <header id="nav-header" class="container">
